--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Interactive Bézier Rope</title>
+  <style>
+    body {
+      margin: 0;
+      background: black;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    canvas {
+      border: 1px solid #333;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Canvas element -->
+  <canvas id="canvas"></canvas>
+
+  <!-- Load main JS file -->
+  <script type="module" src="main.js"></script>
+
+</body>
+</html>
 
